--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://myusername.github.io/habit-tracker",
+  "homepage": "https://myusername.github.io",
   "name": "habit-tracker",
   "version": "0.1.0",
   "private": true,
